--- a/personal.html
+++ b/personal.html
@@ -29,7 +29,7 @@
 		<img src = "imgs/wisconsin_dells.jpg" alt="3 kids standing next to a board engraved 'sasquatch lake'" width="25"/>
 		<img src = "imgs/badlands.jpg" alt="3 kids standing next to a big rock engraved 'ben reifel visitor center : badlands national park" width="1000"/>
 		<img src = "imgs/falling.jpg" alt="a boy holding on a clif" width="25"/>
-		<img src = "imgs/jewel_cave.jpg" alt="two kids standing and 1 girl sitting next to a board saying 'jewel cave national monument'" width="1000"/>
+		<img src = "imgs/jewel_cave.JPG" alt="two kids standing and 1 girl sitting next to a board saying 'jewel cave national monument'" width="1000"/>
 	</main>
 	<footer>
 		<p>Colleen van Lent &copy; 2020 </p>
