--- a/personal.html
+++ b/personal.html
@@ -9,33 +9,32 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
+
 <body>
 	<header>
-	  <nav>
-		<ul>
-			<li><a href = "index.html">About Me</a></li>
-			<li><a href = "personal.html">Family</a></li>
-			<li><a href = "random.html">Random</a></li>
-			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
-		</ul>
-	   <nav>
+		<nav>
+			<ul>
+				<li><a href="index.html">About Me</a></li>
+				<li><a href="personal.html">Family</a></li>
+				<li><a href="random.html">Random</a></li>
+				<li><a href="http://www.si.umich.edu">UMSI</a></li>
+			</ul>
+		</nav>
 		<h1>Family</h1>
 	</header>
-
 	<main>
 		<p>
-		In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.
-		<p>
-		<img src = "imgs/wisconsin_dells.jpg" alt="3 kids standing next to a board engraved sasquatch lake" width="25"/>
-		<img src = "imgs/badlands.jpg" alt="3 kids standing next to a big rock engraved ben reifel visitor center badlands national park" width="1000"/>
-		<img src = "imgs/falling.jpg" alt="a boy holding on a clif" width="25"/>
-		<img src = "imgs/jewel_cave.JPG" alt="two kids standing and 1 girl sitting next to a board saying jewel cave national monument" width="1000"/>
+			In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states. We
+			went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.
+		</p>
+		<img src="imgs/wisconsin_dells.jpg" alt="Wisconsin Dells" width="25" />
+		<img src="imgs/badlands.jpg" alt="Badlands" width="1000" />
+		<img src="imgs/falling.jpg" alt="Falling" width="25" />
+		<img src="imgs/jewel_cave.JPG" alt="Jewel Cave" width="1000" />
 	</main>
-	<footer>
-		<p>Colleen van Lent &copy; 2020 </p>
-	</footer>
 
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
-
-
