--- a/random.html
+++ b/random.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
+
 <body>
 	<header>
 		<nav>
@@ -25,17 +26,21 @@
 		<h1>Random Page</h1>
 	</header>
 
-	<p>
-		Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML tutorial</a> as well as the readings from Shay Howe's <a href = "https://learn.shayhowe.com/html-css/">HTML and CSS tutorial.</a>
-	</p>
-
-	<p>
-		Using the Piazza site is another great way to stay on top of your classwork.
-	</p>
+	<main>
+		<p>
+			Make sure you are doing the readings from the <a href="http://www.w3schools.com/html/">W3 Schools HTML tutorial</a>
+			as well as the readings from Shay Howe's <a href="https://learn.shayhowe.com/html-css/">HTML and CSS
+				tutorial</a>
+		</p>
+		<p>
+			Using the Piazza site is another great way to stay on top of your classwork
+		</p>
+	</main>
 
 	<footer>
 		<p>Colleen van Lent &copy; 2020</p>
 	</footer>
+
 </body>
 
 </html>
