--- a/random.html
+++ b/random.html
@@ -29,8 +29,7 @@
 	<main>
 		<p>
 			Make sure you are doing the readings from the <a href="http://www.w3schools.com/html/">W3 Schools HTML tutorial</a>
-			as well as the readings from Shay Howe's <a href="https://learn.shayhowe.com/html-css/">HTML and CSS
-				tutorial</a>
+			as well as the readings from Shay Howe's <a href="https://learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>
 		</p>
 		<p>
 			Using the Piazza site is another great way to stay on top of your classwork
@@ -38,7 +37,9 @@
 	</main>
 
 	<footer>
-		<p>Colleen van Lent &copy; 2020</p>
+		<p>
+			Colleen van Lent &copy; 2020
+		</p>
 	</footer>
 
 </body>
